# coral-machine-docker

./: .dockerfile  .gitignore  CLAUDE.md  CMakePresets.json  DEVELOPMENT_REQUIREMENTS.md  Dockerfile  IMPLEMENTATION_STEPS.md  Makefile  README.md  config.env  docker-compose.yml  logs.txt  setup.sh  startup.sh
docker/: Dockerfile.builder  Dockerfile.runtime  startup-runpod.sh  startup.sh
docs/: GPU_Execution_Debug_Investigation.md  MPI_CUDA_Strategy_Analysis.md  paraview_remote_parallel.txt
gpu_validation/: Dockerfile.builder-test
gpu_validation/scripts/: bootstrap.sh  flags-override.env  validate.sh
gpu_validation/tests/: CMakeLists.txt  palabos_minimal.cpp  stdpar_test.cpp
installers/: 00-prep.sh  06-ide-ssh-setup.sh
legacy-monolithic/: README.md
lib/: common.sh
notes/: GPU-ARCHITECTURE-DECISION.md  PALABOS-GITHUB-CHANGES.md  SINGLE_VOLUME_ARCHITECTURE.md  TAILSCALE-SSH-SETUP.md  UBUNTU-BASE-ARCHITECTURE.md  customizing-commands.md
scripts/: SCRIPT_TEMPLATE.sh  detect-gpu-arch.sh  rebuild-palabos.sh  setup-aliases.sh
test-project/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  coral_test  main.cpp
volume-based/: README.md  docker-compose.yml
volume-based/docker/: Dockerfile.base  Dockerfile.setup
volume-based/scripts/: setup-volume.sh  startup.sh
volume-setup/: .env.example  .gitattributes  LOCAL_TEST_PLAN.md  Makefile  README.md  RUNPOD_ACTUAL_DEPLOYMENT.md  RUNPOD_DEPLOYMENT.md  config.env  docker-compose.yml  runpod.toml  setup.sh  validate.sh
volume-setup/docker/: Dockerfile.builder  Dockerfile.runtime  startup-runpod.sh  startup.sh
volume-setup/installers/: 00-prep.sh  01-compilers.sh  02-build-headers.sh  03-core-libraries.sh  04-visualization.sh  05-scripts.sh  06-ide-ssh-setup.sh  regenerate-env.sh
volume-setup/lib/: common.sh
volume-setup/scripts/: output-manager.sh  paraview-manager.sh
